2007-12-22  Stephen J. Turnbull  <stephen@xemacs.org>

	Factor out lists of operators specially treated by `make-autoload'.

	* autoload.el (autoload-make-autoload-operators): New.
	(autoload-make-autoload-complex-operators): New.
	(make-autoload): Use them.

2007-12-18  Mike Sperber  <mike@xemacs.org>

	* autoload.el (process-one-lisp-autoload): Insert <immediate> into
	the section header for immediate autoloads, to make sure the
	upstream doesn't think there aren't any autoloads at all.

2007-12-19  Mike Sperber  <mike@xemacs.org>

	* startup.el (ask-about-user-init-file-migration-p): Factored out
	check.
	(maybe-migrate-user-init-file):
	(migrate-user-init-file): Don't do a backup of ~/.emacs anymore.
	Instead, make only a manual adjustment of the file, if at all,
	i.e. don't go through customize magic anymore.
	(unmigrate-user-init-file): Don't use customize to set
	`load-home-init-file' anymore.
	(set-load-home-init-file): Add; performs the modification
	previously done through customize.
	(unmigrate-user-init-file): Use `set-load-home-init-file' instead
	of customize.
	(command-line-1): Only wait for the first event if we're not going
	to ask about migration.

2007-12-18  Aidan Kehoe  <kehoea@parhasard.net>

	* help.el (describe-function-1):
	Give details of bindings for commands, taking into account
	global-window-system-map and global-tty-map when bindings differ
	compared to the global map. 

2007-12-17  Aidan Kehoe  <kehoea@parhasard.net>

	* subr.el (integer-to-bit-vector): New.
	* subr.el (bit-vector-to-integer): New.
	Provide naive implementations using the Lisp reader for these. 

2007-12-14  Aidan Kehoe  <kehoea@parhasard.net>

	* process.el (substitute-env-vars):
	Merge an example from GNU's docstring. 
	* process.el (setenv):	
	Pass nil as the default abbrev table to the #'read-from-minibuffer
	call, instead of passing the current value of the variable. Bug
	introduced by an incorrect sync from GNU by Ben; reported by